...
                            .padding(.vertical, 4)
                        }
                    }
                    .onDelete(perform: deleteConversations)
                }
                .listStyle(InsetGroupedListStyle())
                .navigationTitle("Conversations")
                .toolbar {
                    ToolbarItem(placement: .navigationBarTrailing) {
                        EditButton()
                    }
                }

...
